--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lowlight": "^3.3.0",
     "lucide-react": "^0.475.0",
     "moment-timezone": "^0.5.47",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^9.5.1",
