--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 VITE_BACKEND_URL=http://localhost:8000
 VITE_API_BASE_URL=http://localhost:5173
+VITE_GOOGLE_CLIENT_ID=1042048809189-134hjes9qdeurcq9qbh1pkokeplt2l26.apps.googleusercontent.com
+VITE_GITHUB_CLIENT_ID=Ov23liUrY8RuqYcA7OTe
