--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.4.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.2.0",
