--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "strict": true,
       "baseUrl": ".",
       "paths": {
-        "@/*": ["src/*"]
+        "@/*": ["src/*"],
+        "@/components/*": ["src/components/*"],
       },
       "jsx": "react-jsx",
       "esModuleInterop": true,
