--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "swiper": "^11.2.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
