downgraded the react version

--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@
 VITE_API_BASE_URL=https://vovant-backend-1.onrender.com
 VITE_GOOGLE_CLIENT_ID=1042048809189-134hjes9qdeurcq9qbh1pkokeplt2l26.apps.googleusercontent.com
 VITE_GITHUB_CLIENT_ID=Ov23liUrY8RuqYcA7OTe
-#VITE_FRONTEND_URL=https://vovant-space-website-frontend.vercel.app
-VITE_FRONTEND_URL=http://localhost:5173
+VITE_FRONTEND_URL=https://vovant-space-website-frontend.vercel.app
+#VITE_FRONTEND_URL=http://localhost:5173
