--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "@eslint/js": "^9.19.0",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "4.3.4",
     "autoprefixer": "^10.4.16",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
@@ -82,6 +82,6 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
-    "vite": "^6.1.0"
+    "vite": "6.1.0"
   }
 }
