--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-timezone-select": "^3.2.8",
     "react-toastify": "^11.0.3",
     "react-webcam": "^7.2.0",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.2.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
